...
                    bottom = 32.dp + innerPadding.calculateBottomPadding(),
                ),
                horizontalAlignment = Alignment.CenterHorizontally,
                verticalArrangement = Arrangement.spacedBy(12.dp),
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("chat_message_list")
                    .hazeSource(state = hazeState),
            ) {
            itemsIndexed(
                items = currentNodes,
                key = { index, item -> item.id },
            ) { index, node ->
...
        }
    }

    LazyColumn(
        modifier = Modifier
            .fillMaxSize()
            .testTag("chat_preview_list")
            .hazeSource(state = hazeState),
        contentPadding = PaddingValues(16.dp) + PaddingValues(
            top = innerPadding.calculateTopPadding(),
            bottom = 32.dp + innerPadding.calculateBottomPadding(),
        ),
        verticalArrangement = Arrangement.spacedBy(8.dp),
...
